[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Ground.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TileHighlight.png" type="Texture" id=2]
[ext_resource path="res://Tile.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Tile" type="Area2D"]
position = Vector2( 32, 32 )
script = ExtResource( 3 )

[node name="TileHighlight" type="Sprite" parent="."]
visible = false
position = Vector2( 7.62939e-06, 7.62939e-06 )
scale = Vector2( 6.4, 6.4 )
texture = ExtResource( 2 )

[node name="Ground" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionRect" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BuildingIcon" type="Sprite" parent="."]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 32, 32 )
[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
